Bug 106772 - LibreOffice Hanging on Startup on Ubuntu (gtk3)
Summary: LibreOffice Hanging on Startup on Ubuntu (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Arnaud Versini
URL:
Whiteboard: target:5.4.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2017-03-26 05:04 UTC by Luke
Modified: 2017-03-27 09:47 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2017-03-26 05:04:13 UTC
Ever since
http://cgit.freedesktop.org/libreoffice/core/commit/?id=6903066822900a700ccf67ae70fa171c94644a9a

Related: rhbz#1334915 tdf#100158 hack using startcenter icon under wayland

When I try to launch libreoffice, nothing happens. Reverting this commit fixes the issue. I have reproduced this bug on both Ubuntu 16.04 and 16.10.
Comment 1 Xisco Faulí 2017-03-26 17:11:48 UTC
I can reproduce it in

Version: 5.4.0.0.alpha0+
Build ID: 193f8966135064a32164c9da08d01dab9c1fc15d
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not in

Version: 5.4.0.0.alpha0+
Build ID: 193f8966135064a32164c9da08d01dab9c1fc15d
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

It has been mentioned in the dev mailling list too -> http://nabble.documentfoundation.org/master-builds-starts-but-no-UI-tc4211020.html.
Comment 2 Xisco Faulí 2017-03-26 17:22:23 UTC
Fix proposal submitted to gerrit: https://gerrit.libreoffice.org/#/c/35720/
Comment 3 Commit Notification 2017-03-26 20:11:15 UTC
Arnaud Versini committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80c18d5dd33d0681c58816d7536fe3e7d1297b9e

Fixes tdf#106772 show the window in X11 in VCL gtk3 plugin.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.