Fixes tdf#106772 show the window in X11 in VCL gtk3 plugin.

The window is shown only in Wayland.
Thanks to Jean-Baptiste Faure for the bisect.

Change-Id: Ibeffc5ae62d4c341e30b15021eb695859fc1025a